# artemis-cve

./: pyproject.toml
docker/: cu128.dockerfile
src/artemis_cve/: __init__.py
src/artemis_cve/commands/: app.py
src/artemis_cve/inferencers/smoothers/: __init__.py  one_euro.py
src/artemis_cve/inferencers/yolo/: __init__.py  inferencer.py  webrtc_inferencer.py
src/artemis_cve/models/: __init__.py  registry.py
src/artemis_cve/models/yolo26e/: __init__.py  backend.py  configuration.py  modeling.py  outputs.py
src/artemis_cve/models/yolo26e_cuda_graph/: __init__.py  modeling.py
src/artemis_cve/protos/detector/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  detector.proto  detector_pb2.py  detector_pb2.pyi  detector_pb2_grpc.py  detector_pb2_grpc.pyi  webrtc_detector.proto  webrtc_detector_pb2.py  webrtc_detector_pb2.pyi  webrtc_detector_pb2_grpc.py  webrtc_detector_pb2_grpc.pyi
src/artemis_cve/servicers/: __init__.py  webrtc_servicer.py
src/artemis_cve/utils/: parse_name.py
src/artemis_cve/webrtc/: __init__.py  manager.py  session.py
tests/: yoloe.py
tests/demo_webrtc/: client.py
tests/demo_yolo/: demo_inferencer.py  demo_inferencer_speed.py  profile_inferencer_stages.py
